Added exception handlers

--- a/src/main/resources/messages/app_EN.properties
+++ b/src/main/resources/messages/app_EN.properties
@@ -73,3 +73,17 @@ common.close=Close
 common.deleteConfirm=Are you sure you want to delete 
 common.deleted=Record deleted
 common.saved=Record saved
+
+error.appError=Application error
+error.dataNotFound=Data not found
+error.dataError=Data error
+error.validationError=Validation error
+error.wrongRequest=Wrong request
+
+NotEmpty=[{0}] must not be empty
+NotBlank=[{0}] must not be empty
+NotNull=[{0}] must not be empty
+Email= Invalid format of [{0}]
+Range=[{0}] must be between {2} and {1}
+Length=[{0}] length must be between {2} and {1}
+Size=[{0}] size must be between {2} and {1}
