--- a/src/main/resources/messages/app_RU.properties
+++ b/src/main/resources/messages/app_RU.properties
@@ -71,3 +71,17 @@ common.close=Закрыть
 common.saved=Запись сохранена
 common.deleteConfirm=Вы уверены, что хотите удалить 
 common.deleted=Запись удалена
+
+error.appError=Ошибка приложения
+error.dataNotFound=Данные не найдены
+error.dataError=Ошибка в данных
+error.validationError=Ошибка проверки данных
+error.wrongRequest=Неверный запрос
+
+NotEmpty=[{0}] не должно быть пустым
+NotBlank=[{0}] не должно быть пустым
+NotNull=[{0}] не должно быть пустым
+Email=Неверный формат [{0}]
+Range= [{0}] должно быть между {2} и {1}
+Length=Длинна [{0}] должна быть между {2} и {1}
+Size=Размер [{0}] должен быть между {2} и {1}
