Restaurant and Contact collapse forms replaced to modal

--- a/src/main/resources/messages/app_EN.properties
+++ b/src/main/resources/messages/app_EN.properties
@@ -8,16 +8,21 @@ app.profile=Profile
 
 restaurant.title=Restaurants
 restaurant.add=Add restaurant
+restaurant.editTitle=Restaurant editor
 restaurant.searchByName=Search by restaurant name
 restaurant.searchByCuisine=Search by cuisine
 restaurant.name=Restaurant name
 restaurant.cuisine=Cuisine
-restaurant.photo=Choose file
 
 contact.add=Add contact
 contact.edit=Edit contact
 contact.title=Location and contact details
+contact.editTitle=Contact editor
 contact.noData=No data
+contact.address=Address
+contact.website=Website
+contact.email=Email
+contact.phone_number=Phone number
 
 ratingCard.outOf=out of 
 ratingCard.count=reviews total 
@@ -31,7 +36,7 @@ ratingCard.noReviews=does not have enough reviews. Be one of the first people to
 review.title=Reviews
 review.usersReview=My Reviews
 review.write=Write a review
-review.editTitle=Reviews editor
+review.editTitle=Review editor
 review.rating=Rating
 review.titleEdit=Title
 review.comment=Comment
