--- a/src/main/resources/messages/app_RU.properties
+++ b/src/main/resources/messages/app_RU.properties
@@ -8,16 +8,21 @@ app.profile=Профиль
 
 restaurant.title=Рестораны
 restaurant.add=Добавить ресторан
+restaurant.editTitle=Редактор ресторана
 restaurant.searchByName=Искать по названию
 restaurant.searchByCuisine=Искать по кухне
 restaurant.name=Название ресторана
 restaurant.cuisine=Название кухни
-restaurant.photo=Выберите файл
 
 contact.add=Добавить контакты
 contact.edit=Редактрировать контакты
 contact.title=Расположение и контактные данные
+contact.editTitle=Редактор контактов
 contact.noData=Нет данных
+contact.address=Адрес
+contact.website=Адрес сайта
+contact.email=Адрес электронной почты
+contact.phone_number=Телефонный номер
 
 ratingCard.outOf=из 
 ratingCard.count=отзывов всего 
@@ -54,7 +59,7 @@ user.firstName=Имя
 user.lastName=Фамилия
 user.password=Пароль
 user.retypePassword=Повторите пароль
-user.email=Электронная почта
+user.email=Адрес электронной почты
 user.role=Роли
 user.active=Активен
 user.activated=Пользователь активирован
