Added restrictions while adding reviews for repeated reviews and not activated users.

--- a/src/main/resources/messages/app_EN.properties
+++ b/src/main/resources/messages/app_EN.properties
@@ -46,6 +46,7 @@ review.placeholderRating=From 1 to 5
 review.placeholderTitle=Short title for your review
 review.placeholderComment=Comment
 review.placeholderPhoto=Choose photo
+review.repeated=You have already left a review for this restaurant. If you want to change your review, you can delete the old one and write a new one.
 
 
 user.title=Users
@@ -65,6 +66,7 @@ user.password=Password
 user.retypePassword=Retype password
 user.activated=User activated
 user.deactivated=User deactivated
+user.notActivated=You cann`t leave reviews because your account is not confirmed. Please check your e-mail.
 
 
 common.add=Add
