--- a/src/main/resources/messages/app_RU.properties
+++ b/src/main/resources/messages/app_RU.properties
@@ -46,6 +46,7 @@ review.placeholderRating=От 1 to 5
 review.placeholderTitle=Короткий заголовок для вашего отзыва
 review.placeholderComment=Развернутый комментарий
 review.placeholderPhoto=Выберите фото
+review.repeated=Вы уже оставяли отзыв для данного ресторана. Если вы хотите изменить свой отзыв, то можете удалить старый и написать новый.
 
 user.title=Пользователи
 user.addNew=Добавить пользователя
@@ -64,6 +65,7 @@ user.role=Роли
 user.active=Активен
 user.activated=Пользователь активирован
 user.deactivated=Пользователь деактивирован
+user.notActivated=Вы не можете оставлять отзывы, т.к. ваша учетная запись не подтверждена. Проверьте электронную почту.
 
 common.add=Добавить
 common.edit=Редактировать
