Added menu for restaurant

--- a/src/main/resources/messages/app_EN.properties
+++ b/src/main/resources/messages/app_EN.properties
@@ -13,6 +13,7 @@ restaurant.searchByName=Search by restaurant name
 restaurant.searchByCuisine=Search by cuisine
 restaurant.name=Restaurant name
 restaurant.cuisine=Cuisine
+restaurant.menu=Menu
 
 contact.add=Add contact
 contact.edit=Edit contact
