--- a/src/main/resources/messages/app_RU.properties
+++ b/src/main/resources/messages/app_RU.properties
@@ -13,6 +13,7 @@ restaurant.searchByName=Искать по названию
 restaurant.searchByCuisine=Искать по кухне
 restaurant.name=Название ресторана
 restaurant.cuisine=Название кухни
+restaurant.menu=Меню
 
 contact.add=Добавить контакты
 contact.edit=Редактрировать контакты
