Added handling for duplicate email and review

--- a/src/main/resources/messages/app_EN.properties
+++ b/src/main/resources/messages/app_EN.properties
@@ -82,6 +82,9 @@ common.deleteConfirm=Are you sure you want to delete
 common.deleted=Record deleted
 common.saved=Record saved
 
+exception.user.duplicateEmail=User with this email already exists
+exception.review.duplicateForUser=You have already left a review for this restaurant.
+
 error.appError=Application error
 error.dataNotFound=Data not found
 error.dataError=Data error
