--- a/src/main/resources/messages/app_RU.properties
+++ b/src/main/resources/messages/app_RU.properties
@@ -80,6 +80,9 @@ common.saved=Запись сохранена
 common.deleteConfirm=Вы уверены, что хотите удалить 
 common.deleted=Запись удалена
 
+exception.user.duplicateEmail=Пользователь с такой почтой уже есть в приложении
+exception.review.duplicateForUser=Вы уже оставяли отзыв для данного ресторана.
+
 error.appError=Ошибка приложения
 error.dataNotFound=Данные не найдены
 error.dataError=Ошибка в данных
