Added internalization when registering users

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -64,6 +64,8 @@ user.email=Email
 user.role=Role
 user.active=Active
 user.password=Password
+user.password2=Password2
+user.passwordError=Passwords are different
 user.retypePassword=Retype password
 user.activated=User activated
 user.deactivated=User deactivated
@@ -84,12 +86,14 @@ common.saved=Record saved
 
 exception.user.duplicateEmail=User with this email already exists
 exception.review.duplicateForUser=You have already left a review for this restaurant.
+exception.user.modificationRestriction=Admin/User modification is forbidden
 
 error.appError=Application error
 error.dataNotFound=Data not found
 error.dataError=Data error
 error.validationError=Validation error
 error.wrongRequest=Wrong request
+error.Captcha=Fill captcha
 
 NotEmpty=[{0}] must not be empty
 NotBlank=[{0}] must not be empty
