--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -60,8 +60,10 @@ user.editorTitle=Редактор пользователя
 user.firstName=Имя
 user.lastName=Фамилия
 user.password=Пароль
+user.password2=Пароль2
+user.passwordError=Пароли не совпадают
 user.retypePassword=Повторите пароль
-user.email=Адрес электронной почты
+user.email=Электроная почта
 user.role=Роли
 user.active=Активен
 user.activated=Пользователь активирован
@@ -82,12 +84,14 @@ common.deleted=Запись удалена
 
 exception.user.duplicateEmail=Пользователь с такой почтой уже есть в приложении
 exception.review.duplicateForUser=Вы уже оставяли отзыв для данного ресторана.
+exception.user.modificationRestriction=Модификация Admin/User запрещена
 
 error.appError=Ошибка приложения
 error.dataNotFound=Данные не найдены
 error.dataError=Ошибка в данных
 error.validationError=Ошибка проверки данных
 error.wrongRequest=Неверный запрос
+error.Captcha=Заполните капчу
 
 NotEmpty=[{0}] не должно быть пустым
 NotBlank=[{0}] не должно быть пустым
